[gd_scene load_steps=46 format=3 uid="uid://b16e2bfno7yi"]

[ext_resource type="Script" path="res://Character/Enine/Crabby/crabby.gd" id="1_4ubh3"]
[ext_resource type="Texture2D" uid="uid://y4ov8mrp5yh1" path="res://Image/asset1/The Crusty Crew/Crabby/01-Idle/Idle 01.png" id="1_i0r1e"]
[ext_resource type="Script" path="res://StateMachine/Damageable.gd" id="2_c8lsh"]
[ext_resource type="Texture2D" uid="uid://5ot5jo14nyk" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 01.png" id="2_j2hrm"]
[ext_resource type="Texture2D" uid="uid://dobdckdhl4cil" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 02.png" id="3_al6pg"]
[ext_resource type="Script" path="res://StateMachine/CharacterStateMachine.gd" id="3_dop6w"]
[ext_resource type="Texture2D" uid="uid://bleko2c17cdpt" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 03.png" id="4_m8g2c"]
[ext_resource type="Texture2D" uid="uid://dh7jq2fl3g5iu" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 04.png" id="5_mk4ul"]
[ext_resource type="Script" path="res://StateMachine/HitState.gd" id="5_ucro7"]
[ext_resource type="Texture2D" uid="uid://bm2ectu1davjh" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 05.png" id="6_2e3dg"]
[ext_resource type="Script" path="res://StateMachine/State.gd" id="6_23gtq"]
[ext_resource type="Texture2D" uid="uid://p8cxg702j2ek" path="res://Image/asset1/The Crusty Crew/Crabby/02-Run/Run 06.png" id="7_bex5v"]
[ext_resource type="Texture2D" uid="uid://brinadb2tdacr" path="res://Image/asset1/The Crusty Crew/Crabby/07-Attack/Attack 01.png" id="8_fmh7b"]
[ext_resource type="Texture2D" uid="uid://dqook1mun8iva" path="res://Image/asset1/The Crusty Crew/Crabby/07-Attack/Attack 02.png" id="9_ilowx"]
[ext_resource type="Texture2D" uid="uid://btx1hvdtdrd2h" path="res://Image/asset1/The Crusty Crew/Crabby/07-Attack/Attack 03.png" id="10_3fucd"]
[ext_resource type="Texture2D" uid="uid://csuh8b0f5qhml" path="res://Image/asset1/The Crusty Crew/Crabby/07-Attack/Attack 04.png" id="11_n26pb"]
[ext_resource type="Texture2D" uid="uid://bh8tnrcjqtj8l" path="res://Image/asset1/The Crusty Crew/Crabby/08-Hit/Hit 01.png" id="12_y503v"]
[ext_resource type="Texture2D" uid="uid://bhbprru7si42v" path="res://Image/asset1/The Crusty Crew/Crabby/08-Hit/Hit 02.png" id="13_pbbmn"]
[ext_resource type="Texture2D" uid="uid://f42u1qfyqo0q" path="res://Image/asset1/The Crusty Crew/Crabby/08-Hit/Hit 03.png" id="14_osnpj"]
[ext_resource type="Texture2D" uid="uid://bqq5tp3db3x63" path="res://Image/asset1/The Crusty Crew/Crabby/08-Hit/Hit 04.png" id="15_y05yw"]
[ext_resource type="Texture2D" uid="uid://cxcjtdbwdyn77" path="res://Image/asset1/The Crusty Crew/Crabby/09-Dead Hit/Dead Hit 01.png" id="16_xf8sr"]
[ext_resource type="Texture2D" uid="uid://cwbt7dtq3tq36" path="res://Image/asset1/The Crusty Crew/Crabby/09-Dead Hit/Dead Hit 02.png" id="17_l6tbe"]
[ext_resource type="Texture2D" uid="uid://1avjsj2ao2cw" path="res://Image/asset1/The Crusty Crew/Crabby/09-Dead Hit/Dead Hit 03.png" id="18_m7xv6"]
[ext_resource type="Texture2D" uid="uid://b6o2el8h54m3u" path="res://Image/asset1/The Crusty Crew/Crabby/09-Dead Hit/Dead Hit 04.png" id="19_1qwg3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wynl"]
size = Vector2(34, 17)

[sub_resource type="Animation" id="Animation_c4eq2"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_fmh7b"), ExtResource("9_ilowx"), ExtResource("10_3fucd"), ExtResource("11_n26pb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_xcp5t"]
resource_name = "Dead"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("16_xf8sr"), ExtResource("17_l6tbe"), ExtResource("18_m7xv6"), ExtResource("19_1qwg3")]
}

[sub_resource type="Animation" id="Animation_02moc"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_y503v"), ExtResource("13_pbbmn"), ExtResource("14_osnpj"), ExtResource("15_y05yw")]
}

[sub_resource type="Animation" id="Animation_16q5g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_i0r1e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dl3ue"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_j2hrm"), ExtResource("3_al6pg"), ExtResource("4_m8g2c"), ExtResource("5_mk4ul"), ExtResource("6_2e3dg"), ExtResource("7_bex5v")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ixe4"]
_data = {
"Attack": SubResource("Animation_c4eq2"),
"Dead": SubResource("Animation_xcp5t"),
"Hit": SubResource("Animation_02moc"),
"RESET": SubResource("Animation_16q5g"),
"Run": SubResource("Animation_dl3ue")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iqnqd"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ntfem"]
animation = &"Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_agfsq"]
animation = &"Hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lsr0t"]
animation = &"Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gtr4i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cep5l"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pchsa"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wcv6g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4x1l0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ulbyu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kgvd2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fyyyf"]
states/Attack/node = SubResource("AnimationNodeAnimation_iqnqd")
states/Attack/position = Vector2(353, 210)
states/Dead/node = SubResource("AnimationNodeAnimation_ntfem")
states/Dead/position = Vector2(660, 121)
states/Hit/node = SubResource("AnimationNodeAnimation_agfsq")
states/Hit/position = Vector2(510, 111)
states/Run/node = SubResource("AnimationNodeAnimation_lsr0t")
states/Run/position = Vector2(353, 100)
transitions = ["Hit", "Dead", SubResource("AnimationNodeStateMachineTransition_gtr4i"), "Start", "Run", SubResource("AnimationNodeStateMachineTransition_cep5l"), "Hit", "Run", SubResource("AnimationNodeStateMachineTransition_pchsa"), "Run", "Hit", SubResource("AnimationNodeStateMachineTransition_wcv6g"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_4x1l0"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_ulbyu"), "Dead", "End", SubResource("AnimationNodeStateMachineTransition_kgvd2")]
graph_offset = Vector2(-101, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_36a8g"]
size = Vector2(17, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jt02"]
size = Vector2(72, 15)

[node name="Crabby" type="CharacterBody2D" node_paths=PackedStringArray("animation_tree")]
texture_filter = 1
collision_layer = 72
collision_mask = 3
script = ExtResource("1_4ubh3")
attackAnimationString = "Attack"
returnAnimationString = "Run"
animation_tree = NodePath("AnimationTree")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture = ExtResource("1_i0r1e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2.5)
shape = SubResource("RectangleShape2D_7wynl")
debug_color = Color(0.988235, 0, 0.282353, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ixe4")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_1ixe4")
}
tree_root = SubResource("AnimationNodeStateMachine_fyyyf")
anim_player = NodePath("../AnimationPlayer")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_c8lsh")
deadAnimationName = "Dead"

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("3_dop6w")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("State")

[node name="HitState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageasble", "deadState", "returnState")]
script = ExtResource("5_ucro7")
damageasble = NodePath("../../Damageable")
deadState = NodePath("../Dead")
returnState = NodePath("../State")
hitAnimationString = "Hit"
can_attack = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/HitState"]
wait_time = 0.25
one_shot = true

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("6_23gtq")
can_attack = false

[node name="State" type="Node" parent="CharacterStateMachine"]
script = ExtResource("6_23gtq")

[node name="Attack" type="Node" parent="CharacterStateMachine"]
script = ExtResource("6_23gtq")
can_move = false

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(-23.5, 5)
shape = SubResource("RectangleShape2D_36a8g")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attack"]
position = Vector2(28, 5)
shape = SubResource("RectangleShape2D_36a8g")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(2, 4.5)
shape = SubResource("RectangleShape2D_3jt02")
debug_color = Color(0.184314, 0, 0.815686, 0.419608)

[node name="Right" type="Node2D" parent="."]
position = Vector2(330.519, 2.64851)

[node name="Left" type="Node2D" parent="."]
position = Vector2(-225.799, 0.444092)

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/HitState/Timer" to="CharacterStateMachine/HitState" method="_on_timer_timeout"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
